poc-msApp/base/rabbitMQ/deployment-rabbitmq.yaml
# deployment-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:latest
          ports:
            - containerPort: 5672  # Porta para acesso ao RabbitMQ
            - containerPort: 15672 # Porta para acesso ao painel de controle do RabbitMQ
