poc-msApp/base/rabbitMQ/ingress-rabbitmq.yaml
# ingres-rabbitmq
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: rabbitmq-ingress
  namespace: ms
  
spec:
  rules:
    - host: localhost # Seu domínio ou endereço IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672  # Porta do painel de controle do RabbitMQ
